--- a/main.html
+++ b/main.html
@@ -15,7 +15,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<button type="button" class="btn btn-primary modal" data-bs-toggle="modal" data-bs-target="#newton-modal" id="open-modal">
+	<button type="button" class="btn btn-primary modal newton-modal" data-bs-toggle="modal" data-bs-target="#newton-modal" id="open-modal">
         Launch newton modal
       </button>
       
