--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<button type="button" class="btn btn-primary modal newton-modal" data-bs-toggle="modal" data-bs-target="#newton-modal" id="open-modal">
-        Launch newton modal
+        newton-modal
       </button>
       
       <!-- Modal -->
